--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Stocks Price</title>
    
 </head>
 
 <body>
     <div class="container">
-        <h1>STOCKS PRICES</h1>
-        <input id="initial-input" type="number" placeholder="Enter Initial price of the stock :" min="0" required/>
-        <input id="quantity-input" type="number" placeholder="Enter Quantity of stock purchased :" min="0" required/>
-        <input id="current-input" type="number" placeholder="Enter Current value of the stock :" min="0" required/>
+        <h1 id="title">STOCKS PRICES</h1>
+        <label>Enter Initial price of the stock :</label>
+        <input id="initial-input" type="number" placeholder="Enter here" min="0" oninput="validity.valid||(value='');"/>
+        <label>Enter Quantity of stock purchased :</label>
+        <input id="quantity-input" type="number" placeholder="Enter here" min="0" oninput="validity.valid||(value='');"/>
+        <label>Enter Current value of the stock :</label>
+        <input id="current-input" type="number" placeholder="Enter here" min="0" oninput="validity.valid||(value='');"/>
         <button id="btn">CHECK</button>
         <div id="result"></div>
 
