Update: Title name change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1 id="title">STOCKS PRICES</h1>
+        <h1 id="title">STOCKS (Profit or Loss)</h1>
         <label>Enter Initial price of the stock :</label>
         <input id="initial-input" type="number" placeholder="Enter here" min="0" oninput="validity.valid||(value='');"/>
         <label>Enter Quantity of stock purchased :</label>
