--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Stocks Price</title>
+    <title>Stocks | Profit or Loss</title>
    
 </head>
 
 <body>
     <div class="container">
-        <h1 id="title">STOCKS (Profit or Loss)</h1>
+        <h1 id="title">STOCKS Analyzer📈📉</h1>
         <label>Enter Initial price of the stock :</label>
         <input id="initial-input" type="number" placeholder="Enter here" min="0" oninput="validity.valid||(value='');"/>
         <label>Enter Quantity of stock purchased :</label>
